src/objects/Invoices_for_fscmCase__c/Invoices_for_fscmCase__c.object-meta.xml
<CustomObject>
    <description>Invoices Related to Cases from SAP FSCM disputes</description>
    <label>Invoice</label>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>