src/objects/Invoices_for_fscmCase__c/fields/FSCM_ID__c.field-meta.xml
<CustomField>
    <fullName>FSCM_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>FSCM ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>