src/objects/Invoices_for_fscmCase__c/fields/FSCM_Status__c.field-meta.xml
<CustomField>
    <fullName>FSCM_Status__c</fullName>
    <label>FSCM Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>